final commit to website

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ DOCTYPE HTML>
                     the depth estimation task. We fine-tune the sparse pre-trained networks obtained through iterative
                     magnitude pruning and demonstrate universal transferability to the depth estimation task,
                     maintaining performance comparable to that of fine tuning on the full pre-trained model. Our
-                    findings inconclusive.
+                    findings are inconclusive.
 
                 </p>
                 <h2>
@@ -157,7 +157,7 @@ DOCTYPE HTML>
 
                 Our experiments did not confirm nor deny the possibility of the hypothesis as the experiments failed.
                 The codes and pre-trained models used in our experiments can be accessed on
-                GitHub: https://github.com/HAJEKEL/CV_LTH_pre-training_depth-estimation.
+                GitHub: <a https://github.com/HAJEKEL/CV_LTH_pre-training_depth-estimation >github.com/HAJEKEL/CV_LTH_pre-training_depth-estimation</a>.
 
                 Join us on this fascinating journey as we uncover the untapped potential of pre-trained models and
                 shed light on the intriguing relationship between the Lottery Tickets Hypothesis and depth
